Move business logic to service
