# docs/swagger-ui/swagger.json
@@ -109,6 +109,31 @@
 				},
 				"security": [],
 				"parameters": []
+			},
+			"post": {
+				"operationId": "CreateArticle",
+				"produces": [
+					"application/json"
+				],
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"schema": {
+							"$ref": "#/definitions/FashionArticle"
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "body",
+						"name": "requestBody",
+						"required": true,
+						"schema": {
+							"$ref": "#/definitions/FashionArticle"
+						}
+					}
+				]
 			}
 		},
 		"/Users/{id}": {
@@ -132,6 +157,37 @@
 						"name": "id",
 						"required": true,
 						"type": "string"
+					}
+				]
+			},
+			"put": {
+				"operationId": "UpdateArticle",
+				"produces": [
+					"application/json"
+				],
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"schema": {
+							"$ref": "#/definitions/FashionArticle"
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"type": "string"
+					},
+					{
+						"in": "body",
+						"name": "requestBody",
+						"required": true,
+						"schema": {
+							"$ref": "#/definitions/FashionArticle"
+						}
 					}
 				]
 			}
